Reorganized AudioSet directory structure.

--- a/data_prep/AudioSet/extract_labels.ipynb
+++ b/data_prep/AudioSet/extract_labels.ipynb
@@ -27,10 +27,11 @@
    "outputs": [],
    "source": [
     "# data paths:\n",
-    "DATA_ROOT = \"/proj/systewar/datasets/audioset_music_mood/audio_files\"\n",
+    "DATA_ROOT = \"/proj/systewar/datasets/audioset_music_mood\"\n",
+    "AUDIO_DIR = \"audio_files\"\n",
     "ONTOLOGY_FILE = \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/ontology.json\"\n",
     "METADATA_FILES = {\n",
-    "    \"train\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/unbalanced_train_segments.csv\",\n",
+    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/unbalanced_train_segments.csv\",\n",
     "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/eval_segments.csv\"\n",
     "}\n",
     "# AudioSet music mood subset label names:\n",
@@ -39,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# script options:\n",
-    "# data_subsets = [\"train\", \"eval\"]\n",
+    "# data_subsets = [\"unbalanced_train\", \"eval\"]\n",
     "data_subsets = [\"eval\"]\n",
-    "label_files = {\n",
-    "    \"train\": \"/proj/systewar/datasets/audioset_music_mood/labels_train.csv\",\n",
-    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/labels_eval.csv\"\n",
+    "label_files_orig_split = {\n",
+    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_unbalanced_train.csv\",\n",
+    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_eval.csv\"\n",
     "}"
    ]
   },
@@ -146,7 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19969/2926517863.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "/tmp/ipykernel_15307/2926517863.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  metadata_dfs[subset] = pd.read_csv(METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n"
      ]
     }
@@ -179,21 +180,21 @@
     "# extract audio file names:\n",
     "audio_file_names = {}\n",
     "for subset in data_subsets:\n",
-    "    subset_root = os.path.join(DATA_ROOT, subset)\n",
+    "    subset_root = os.path.join(DATA_ROOT, AUDIO_DIR, subset)\n",
     "    audio_file_names[subset] = [name for name in os.listdir(subset_root) if os.path.isfile(os.path.join(subset_root, name))]\n",
     "    print(\"Original size of {} set: {}\".format(subset, len(audio_file_names[subset])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting labels for eval set: 100%|██████████| 344/344 [00:00<00:00, 419.10it/s]"
+      "Extracting labels for eval set: 100%|██████████| 344/344 [00:00<00:00, 450.31it/s]"
      ]
     },
     {
@@ -204,21 +205,22 @@
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 337 entries, 0 to 336\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   file_name  337 non-null    object\n",
-      " 1   label      337 non-null    object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 5.4+ KB\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   orig_subset  337 non-null    object\n",
+      " 1   file_name    337 non-null    object\n",
+      " 2   label        337 non-null    object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 8.0+ KB\n",
       "None\n",
       "\n",
-      "                    file_name           label\n",
-      "0   eval/rez5KDmIZoc_30.0.wav    Tender music\n",
-      "1   eval/ogW2tWCxpPM_30.0.wav     Funny music\n",
-      "2    eval/1bSP4wLfMpA_0.0.wav     Scary music\n",
-      "3   eval/8akqVDDGsNQ_30.0.wav  Exciting music\n",
-      "4  eval/sC7T0sEG6ek_230.0.wav     Angry music\n",
+      "  orig_subset              file_name           label\n",
+      "0        eval   rez5KDmIZoc_30.0.wav    Tender music\n",
+      "1        eval   ogW2tWCxpPM_30.0.wav     Funny music\n",
+      "2        eval    1bSP4wLfMpA_0.0.wav     Scary music\n",
+      "3        eval   8akqVDDGsNQ_30.0.wav  Exciting music\n",
+      "4        eval  sC7T0sEG6ek_230.0.wav     Angry music\n",
       "\n",
       "\n"
      ]
@@ -235,6 +237,7 @@
     "# extract labels of audio files:\n",
     "label_dfs = {}\n",
     "for subset in data_subsets:\n",
+    "    orig_subset_names = []\n",
     "    file_names = []\n",
     "    mood_labels = []\n",
     "    n_bad_files = 0     # number of audio files with not exactly 1 music mood label\n",
@@ -269,7 +272,8 @@
     "                n_mood_labels += 1\n",
     "        # only keep audio files with exactly 1 music mood label:\n",
     "        if n_mood_labels == 1:\n",
-    "            file_names.append(subset + \"/\" + file_name)\n",
+    "            orig_subset_names.append(subset)\n",
+    "            file_names.append(file_name)\n",
     "            mood_labels.append(mood_label)\n",
     "        else:\n",
     "            n_bad_files += 1\n",
@@ -279,6 +283,7 @@
     "    # save as dataframe:\n",
     "    label_dfs[subset] = pd.DataFrame(\n",
     "        data={\n",
+    "            \"orig_subset\": orig_subset_names,\n",
     "            \"file_name\": file_names,\n",
     "            \"label\": mood_labels\n",
     "        }\n",
@@ -289,7 +294,7 @@
     "    print(label_dfs[subset].head())\n",
     "    print(\"\\n\")\n",
     "    # save to file:\n",
-    "    label_dfs[subset].to_csv(label_files[subset], index=False)"
+    "    label_dfs[subset].to_csv(label_files_orig_split[subset], index=False)"
    ]
   }
  ],
