--- a/data_prep/AudioSet/data_exploration/explore_data.ipynb
+++ b/data_prep/AudioSet/data_exploration/explore_data.ipynb
@@ -24,8 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data path:\n",
-    "DATA_ROOT = \"/proj/systewar/datasets/audioset_music_mood/audio_files\"\n",
+    "# data paths:\n",
+    "DATA_ROOT = \"/proj/systewar/datasets/audioset_music_mood\"\n",
+    "AUDIO_DIR = \"audio_files\"\n",
     "# audio constants:\n",
     "SAMPLE_RATE = 16000     # in Hz\n",
     "CLIP_LENGTH_EXPECT = 10.0      # in seconds"
@@ -38,7 +39,7 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "data_subsets = [\"train\", \"eval\"]"
+    "data_subsets = [\"unbalanced_train\", \"eval\"]"
    ]
   },
   {
@@ -58,8 +59,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original size of train set: 13268\n",
-      "Original size of eval set: 344\n"
+      "Size of unbalanced_train set: 13268\n",
+      "Size of eval set: 344\n"
      ]
     }
    ],
@@ -67,9 +68,9 @@
     "# extract data file names:\n",
     "data_file_names = {}\n",
     "for subset in data_subsets:\n",
-    "    subset_root = os.path.join(DATA_ROOT, subset)\n",
+    "    subset_root = os.path.join(DATA_ROOT, AUDIO_DIR, subset)\n",
     "    data_file_names[subset] = [name for name in os.listdir(subset_root) if os.path.isfile(os.path.join(subset_root, name))]\n",
-    "    print(\"Original size of {} set: {}\".format(subset, len(data_file_names[subset])))"
+    "    print(\"Size of {} set: {}\".format(subset, len(data_file_names[subset])))"
    ]
   },
   {
@@ -81,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veryifing train subset...\n",
+      "Veryifing unbalanced_train subset...\n",
       "Veryifing eval subset...\n"
      ]
     }
@@ -91,7 +92,7 @@
     "for subset in data_subsets:\n",
     "    print(\"Veryifing {} subset...\".format(subset))\n",
     "    for file_name in data_file_names[subset]:\n",
-    "        file_path = os.path.join(DATA_ROOT, subset, file_name)\n",
+    "        file_path = os.path.join(DATA_ROOT, AUDIO_DIR, subset, file_name)\n",
     "        \n",
     "        # verify file name:\n",
     "        assert file_path.endswith(\".wav\"), \"File path does not end in '.wav'\"\n",
@@ -117,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of files in train set with unexpected lengths: 397\n",
+      "Number of files in unbalanced_train set with unexpected lengths: 397\n",
       "Number of files in eval set with unexpected lengths: 4\n"
      ]
     }
@@ -127,7 +128,7 @@
     "for subset in data_subsets:\n",
     "    n_unexpect_files = 0\n",
     "    for file_name in data_file_names[subset]:\n",
-    "        file_path = os.path.join(DATA_ROOT, subset, file_name)\n",
+    "        file_path = os.path.join(DATA_ROOT, AUDIO_DIR, subset, file_name)\n",
     "\n",
     "        # get clip length:\n",
     "        metadata = torchaudio.info(file_path)\n",
