Minor update to split_dataset.ipynb

--- a/data_prep/IMAC_images/split_dataset.ipynb
+++ b/data_prep/IMAC_images/split_dataset.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# script options:\n",
     "N_class_test = 200     # number of samples per class in (new) test set\n",
-    "label_files_split = {\n",
+    "metadata_files_split = {\n",
     "    \"train\": \"/proj/systewar/datasets/IMAC/image_dataset/labels_train.csv\",\n",
     "    \"test\": \"/proj/systewar/datasets/IMAC/image_dataset/labels_test.csv\"\n",
     "}"
@@ -253,8 +253,8 @@
     "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
     "\n",
     "# save to fi\n",
-    "metadata_train.to_csv(label_files_split[\"train\"], index=False)\n",
-    "metadata_test.to_csv(label_files_split[\"test\"], index=False)"
+    "metadata_train.to_csv(metadata_files_split[\"train\"], index=False)\n",
+    "metadata_test.to_csv(metadata_files_split[\"test\"], index=False)"
    ]
   }
  ],
