Minor updates to explore_data.ipynb

--- a/data_prep/AudioSet/data_exploration/explore_data.ipynb
+++ b/data_prep/AudioSet/data_exploration/explore_data.ipynb
@@ -15,7 +15,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import torchaudio"
+    "import torchaudio\n",
+    "import numpy as np\n",
+    "import tqdm"
    ]
   },
   {
@@ -79,23 +81,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Veryifing unbalanced_train subset...\n",
-      "Veryifing eval subset...\n"
+      "Verifying unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 28936.37it/s]\n",
+      "Verifying eval subset...: 100%|██████████| 344/344 [00:00<00:00, 25443.33it/s]\n"
      ]
     }
    ],
    "source": [
     "# verify dataset:\n",
     "for subset in data_subsets:\n",
-    "    print(\"Veryifing {} subset...\".format(subset))\n",
-    "    for file_name in data_file_names[subset]:\n",
+    "    # check for duplicate file names:\n",
+    "    assert len(set(data_file_names[subset])) == len(data_file_names[subset]), \"Duplicate file names found.\"\n",
+    "    \n",
+    "    for file_name in tqdm.tqdm(data_file_names[subset], total=len(data_file_names[subset]), desc=\"Verifying {} subset...\".format(subset)):\n",
     "        file_path = os.path.join(DATA_ROOT, AUDIO_DIR, subset, file_name)\n",
-    "        \n",
+    "\n",
     "        # verify file name:\n",
     "        assert file_path.endswith(\".wav\"), \"File path does not end in '.wav'\"\n",
+    "\n",
     "        # verify sampling rate:\n",
     "        metadata = torchaudio.info(file_path)\n",
     "        assert metadata.sample_rate == SAMPLE_RATE, \"Incorrect sampling rate.\""
@@ -118,8 +123,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of files in unbalanced_train set with unexpected lengths: 397\n",
-      "Number of files in eval set with unexpected lengths: 4\n"
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Examining unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 28119.79it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of files with unexpected lengths: 397\n",
+      "Minimim clip length: 3.3436875s\n",
+      "Maximum clip length: 10.0s\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Examining eval subset...: 100%|██████████| 344/344 [00:00<00:00, 26545.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of files with unexpected lengths: 4\n",
+      "Minimim clip length: 9.1395625s\n",
+      "Maximum clip length: 10.0s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -127,16 +171,27 @@
     "# count number of audio files with unexpected clip lengths:\n",
     "for subset in data_subsets:\n",
     "    n_unexpect_files = 0\n",
-    "    for file_name in data_file_names[subset]:\n",
+    "    min_clip_length = np.inf\n",
+    "    max_clip_length = 0.0\n",
+    "    print()\n",
+    "    for file_name in tqdm.tqdm(data_file_names[subset], total=len(data_file_names[subset]), desc=\"Examining {} subset...\".format(subset)):\n",
     "        file_path = os.path.join(DATA_ROOT, AUDIO_DIR, subset, file_name)\n",
     "\n",
     "        # get clip length:\n",
     "        metadata = torchaudio.info(file_path)\n",
     "        length = metadata.num_frames / SAMPLE_RATE\n",
+    "\n",
+    "        # check things:\n",
     "        if length != CLIP_LENGTH_EXPECT:\n",
     "            n_unexpect_files += 1\n",
+    "        if length < min_clip_length:\n",
+    "            min_clip_length = length\n",
+    "        if length > max_clip_length:\n",
+    "            max_clip_length = length\n",
     "    \n",
-    "    print(\"Number of files in {} set with unexpected lengths: {}\".format(subset, n_unexpect_files))"
+    "    print(\"Number of files with unexpected lengths: {}\".format(n_unexpect_files))\n",
+    "    print(\"Minimim clip length: {}s\".format(min_clip_length))\n",
+    "    print(\"Maximum clip length: {}s\".format(max_clip_length))"
    ]
   }
  ],
