Added clip lengths to AudioSet metadata files.

--- a/data_prep/AudioSet/extract_labels.ipynb
+++ b/data_prep/AudioSet/extract_labels.ipynb
@@ -17,6 +17,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import json\n",
+    "import torchaudio\n",
     "import tqdm"
    ]
   },
@@ -30,7 +31,7 @@
     "DATA_ROOT = \"/proj/systewar/datasets/audioset_music_mood\"\n",
     "AUDIO_DIR = \"audio_files\"\n",
     "ONTOLOGY_FILE = \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/ontology.json\"\n",
-    "METADATA_FILES = {\n",
+    "ORIG_METADATA_FILES = {\n",
     "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/unbalanced_train_segments.csv\",\n",
     "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/eval_segments.csv\"\n",
     "}\n",
@@ -45,11 +46,10 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "# data_subsets = [\"unbalanced_train\", \"eval\"]\n",
     "data_subsets = [\"eval\"]\n",
-    "label_files_orig_split = {\n",
-    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_unbalanced_train.csv\",\n",
-    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_eval.csv\"\n",
+    "new_metadata_files = {\n",
+    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/metadata_unbalanced_train.csv\",\n",
+    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/metadata_eval.csv\"\n",
     "}"
    ]
   },
@@ -126,7 +126,21 @@
      "output_type": "stream",
      "text": [
       "Loading eval set metadata...\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11717/3297832948.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  orig_metadata_dfs[subset] = pd.read_csv(ORIG_METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 20371 entries, 0 to 20370\n",
       "Data columns (total 4 columns):\n",
@@ -142,24 +156,16 @@
       "\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_15307/2926517863.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  metadata_dfs[subset] = pd.read_csv(METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n"
-     ]
     }
    ],
    "source": [
-    "# load metadata:\n",
-    "metadata_dfs = {}\n",
+    "# load original metadata files:\n",
+    "orig_metadata_dfs = {}\n",
     "col_names = [\"youtube_id\", \"start_seconds\", \"end_seconds\", \"positive_labels\"]\n",
     "for subset in data_subsets:\n",
     "    print(\"Loading {} set metadata...\\n\".format(subset))\n",
-    "    metadata_dfs[subset] = pd.read_csv(METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n",
-    "    print(metadata_dfs[subset].info())\n",
+    "    orig_metadata_dfs[subset] = pd.read_csv(ORIG_METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n",
+    "    print(orig_metadata_dfs[subset].info())\n",
     "    print(\"\\n\")"
    ]
   },
@@ -194,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting labels for eval set: 100%|██████████| 344/344 [00:00<00:00, 450.31it/s]"
+      "Extracting labels for eval set: 100%|██████████| 344/344 [00:00<00:00, 478.17it/s]"
      ]
     },
     {
@@ -205,22 +211,23 @@
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 337 entries, 0 to 336\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   orig_subset  337 non-null    object\n",
-      " 1   file_name    337 non-null    object\n",
-      " 2   label        337 non-null    object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 8.0+ KB\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     337 non-null    object\n",
+      " 1   file_name       337 non-null    object\n",
+      " 2   length_samples  337 non-null    int64 \n",
+      " 3   label           337 non-null    object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 10.7+ KB\n",
       "None\n",
       "\n",
-      "  orig_subset              file_name           label\n",
-      "0        eval   rez5KDmIZoc_30.0.wav    Tender music\n",
-      "1        eval   ogW2tWCxpPM_30.0.wav     Funny music\n",
-      "2        eval    1bSP4wLfMpA_0.0.wav     Scary music\n",
-      "3        eval   8akqVDDGsNQ_30.0.wav  Exciting music\n",
-      "4        eval  sC7T0sEG6ek_230.0.wav     Angry music\n",
+      "  orig_subset              file_name  length_samples           label\n",
+      "0        eval   rez5KDmIZoc_30.0.wav          160000    Tender music\n",
+      "1        eval   ogW2tWCxpPM_30.0.wav          160000     Funny music\n",
+      "2        eval    1bSP4wLfMpA_0.0.wav          160000     Scary music\n",
+      "3        eval   8akqVDDGsNQ_30.0.wav          160000  Exciting music\n",
+      "4        eval  sC7T0sEG6ek_230.0.wav          160000     Angry music\n",
       "\n",
       "\n"
      ]
@@ -235,10 +242,11 @@
    ],
    "source": [
     "# extract labels of audio files:\n",
-    "label_dfs = {}\n",
+    "new_metadata_dfs = {}\n",
     "for subset in data_subsets:\n",
     "    orig_subset_names = []\n",
     "    file_names = []\n",
+    "    clip_length_samples = []\n",
     "    mood_labels = []\n",
     "    n_bad_files = 0     # number of audio files with not exactly 1 music mood label\n",
     "    for file_name in tqdm.tqdm(audio_file_names[subset], total=len(audio_file_names[subset]), desc=\"Extracting labels for {} set\".format(subset)):\n",
@@ -249,8 +257,13 @@
     "        youtube_id = youtube_id_start_time.replace(start_time, \"\")\n",
     "        assert len(youtube_id) == len(youtube_id_start_time) - len(start_time), \"Error with removing start_time.\"\n",
     "\n",
+    "        # get audio clip length (in samples):\n",
+    "        file_path = os.path.join(DATA_ROOT, AUDIO_DIR, subset, file_name)\n",
+    "        metadata = torchaudio.info(file_path)\n",
+    "        length_samples = metadata.num_frames\n",
+    "\n",
     "        # get label ids by querying metadata with youtube id:\n",
-    "        label_ids = metadata_dfs[subset][\"positive_labels\"][metadata_dfs[subset][\"youtube_id\"] == youtube_id]\n",
+    "        label_ids = orig_metadata_dfs[subset][\"positive_labels\"][orig_metadata_dfs[subset][\"youtube_id\"] == youtube_id]\n",
     "\n",
     "        # convert format of labels ids:\n",
     "        label_ids = label_ids.reset_index(drop=True)\n",
@@ -274,6 +287,7 @@
     "        if n_mood_labels == 1:\n",
     "            orig_subset_names.append(subset)\n",
     "            file_names.append(file_name)\n",
+    "            clip_length_samples.append(length_samples)\n",
     "            mood_labels.append(mood_label)\n",
     "        else:\n",
     "            n_bad_files += 1\n",
@@ -281,20 +295,21 @@
     "    print(\"Number of audio files with not exactly 1 music mood label: {}\".format(n_bad_files))\n",
     "    \n",
     "    # save as dataframe:\n",
-    "    label_dfs[subset] = pd.DataFrame(\n",
+    "    new_metadata_dfs[subset] = pd.DataFrame(\n",
     "        data={\n",
     "            \"orig_subset\": orig_subset_names,\n",
     "            \"file_name\": file_names,\n",
+    "            \"length_samples\": clip_length_samples,\n",
     "            \"label\": mood_labels\n",
     "        }\n",
     "    )\n",
     "    print()\n",
-    "    print(label_dfs[subset].info())\n",
+    "    print(new_metadata_dfs[subset].info())\n",
     "    print()\n",
-    "    print(label_dfs[subset].head())\n",
+    "    print(new_metadata_dfs[subset].head())\n",
     "    print(\"\\n\")\n",
     "    # save to file:\n",
-    "    label_dfs[subset].to_csv(label_files_orig_split[subset], index=False)"
+    "    new_metadata_dfs[subset].to_csv(new_metadata_files[subset], index=False)"
    ]
   }
  ],
