--- a/data_prep/AudioSet/split_dataset.ipynb
+++ b/data_prep/AudioSet/split_dataset.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd"
    ]
   },
@@ -24,9 +25,9 @@
    "outputs": [],
    "source": [
     "# data paths:\n",
-    "LABEL_FILES_ORIG_SPLIT = {\n",
-    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_unbalanced_train.csv\",\n",
-    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_split_label_files/labels_eval.csv\"\n",
+    "ORIG_SPLIT_METADATA_FILES = {\n",
+    "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/metadata_unbalanced_train.csv\",\n",
+    "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/metadata_eval.csv\"\n",
     "}"
    ]
   },
@@ -38,9 +39,10 @@
    "source": [
     "# script options:\n",
     "N_class_test = 100     # number of samples per class in (new) test set\n",
-    "label_files_new_split = {\n",
-    "    \"train\": \"/proj/systewar/datasets/audioset_music_mood/labels_train.csv\",\n",
-    "    \"test\": \"/proj/systewar/datasets/audioset_music_mood/labels_test.csv\"\n",
+    "new_split_metadata_dir = \"/proj/systewar/datasets/audioset_music_mood/new_split_metadata_files\"\n",
+    "new_split_metadata_files = {\n",
+    "    \"train\": \"/proj/systewar/datasets/audioset_music_mood/new_split_metadata_files/metadata_train.csv\",\n",
+    "    \"test\": \"/proj/systewar/datasets/audioset_music_mood/new_split_metadata_files/metadata_test.csv\"\n",
     "}"
    ]
   },
@@ -66,30 +68,31 @@
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 13395 entries, 0 to 13394\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   orig_subset  13395 non-null  object\n",
-      " 1   file_name    13395 non-null  object\n",
-      " 2   label        13395 non-null  object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 314.1+ KB\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     13395 non-null  object\n",
+      " 1   file_name       13395 non-null  object\n",
+      " 2   length_samples  13395 non-null  int64 \n",
+      " 3   label           13395 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 418.7+ KB\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "# load original split labels:\n",
-    "labels_orig_split = {}\n",
-    "for subset, file_path in LABEL_FILES_ORIG_SPLIT.items():\n",
+    "# load original split metadata files:\n",
+    "orig_split_metadata_dfs = {}\n",
+    "for subset, file_path in ORIG_SPLIT_METADATA_FILES.items():\n",
     "    print(\"Loading {} set labels...\".format(subset))\n",
-    "    labels_orig_split[subset] = pd.read_csv(file_path)\n",
+    "    orig_split_metadata_dfs[subset] = pd.read_csv(file_path)\n",
     "\n",
     "# concatenate original split labels into a single dataframe:\n",
-    "all_labels = pd.concat(labels_orig_split.values(), axis=\"index\")\n",
-    "all_labels = all_labels.reset_index(drop=True)\n",
+    "all_metadata = pd.concat(orig_split_metadata_dfs.values(), axis=\"index\")\n",
+    "all_metadata = all_metadata.reset_index(drop=True)\n",
     "print()\n",
-    "print(all_labels.info())"
+    "print(all_metadata.info())"
    ]
   },
   {
@@ -103,28 +106,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 700 entries, 10980 to 3237\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   orig_subset  700 non-null    object\n",
-      " 1   file_name    700 non-null    object\n",
-      " 2   label        700 non-null    object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 21.9+ KB\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     700 non-null    object\n",
+      " 1   file_name       700 non-null    object\n",
+      " 2   length_samples  700 non-null    int64 \n",
+      " 3   label           700 non-null    object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 27.3+ KB\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "# group by class label:\n",
-    "all_label_groups = all_labels.groupby(by=\"label\", axis=\"index\")\n",
+    "# group by emotion class label:\n",
+    "all_metadata_groups = all_metadata.groupby(by=\"label\", axis=\"index\")\n",
     "\n",
     "# construct stratified test set by randomly sampling from each class:\n",
-    "labels_test = all_label_groups.sample(n=N_class_test, random_state=42)\n",
-    "print(labels_test.info())\n",
+    "metadata_test = all_metadata_groups.sample(n=N_class_test, random_state=42)\n",
+    "print(metadata_test.info())\n",
     "\n",
     "# sanity check:\n",
-    "for count in labels_test[\"label\"].value_counts():\n",
+    "for count in metadata_test[\"label\"].value_counts():\n",
     "    assert count == N_class_test, \"Error with creating stratified test set.\""
    ]
   },
@@ -139,14 +143,15 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 12695 entries, 0 to 13394\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   orig_subset  12695 non-null  object\n",
-      " 1   file_name    12695 non-null  object\n",
-      " 2   label        12695 non-null  object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 396.7+ KB\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     12695 non-null  object\n",
+      " 1   file_name       12695 non-null  object\n",
+      " 2   length_samples  12695 non-null  int64 \n",
+      " 3   label           12695 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 495.9+ KB\n",
       "None\n",
       "\n",
       "Exciting music    4431\n",
@@ -162,13 +167,13 @@
    ],
    "source": [
     "# construct training set:\n",
-    "labels_train = all_labels.drop(index=list(labels_test.index))\n",
-    "print(labels_train.info())\n",
+    "metadata_train = all_metadata.drop(index=list(metadata_test.index))\n",
+    "print(metadata_train.info())\n",
     "print()\n",
-    "print(labels_train[\"label\"].value_counts())\n",
+    "print(metadata_train[\"label\"].value_counts())\n",
     "\n",
     "# sanity check:\n",
-    "assert set(labels_train.index).isdisjoint(set(labels_test.index)), \"Train and test sets are not disjoint.\""
+    "assert set(metadata_train.index).isdisjoint(set(metadata_test.index)), \"Train and test sets are not disjoint.\""
    ]
   },
   {
@@ -178,21 +183,22 @@
    "outputs": [],
    "source": [
     "# reset indices:\n",
-    "labels_train = labels_train.reset_index(drop=True)\n",
-    "labels_test = labels_test.reset_index(drop=True)\n",
+    "metadata_train = metadata_train.reset_index(drop=True)\n",
+    "metadata_test = metadata_test.reset_index(drop=True)\n",
     "\n",
     "# more sanity checks:\n",
-    "assert all_labels.shape[0] == labels_train.shape[0] + labels_test.shape[0], \"Train and test set sizes don't add up.\"\n",
-    "assert set(labels_train[\"file_name\"].tolist()).isdisjoint(set(labels_test[\"file_name\"].tolist())), \"Train and test sets are not disjoint.\"\n",
-    "class_counts_all = all_labels[\"label\"].value_counts()\n",
-    "class_counts_train = labels_train[\"label\"].value_counts()\n",
-    "class_counts_test = labels_test[\"label\"].value_counts()\n",
-    "for class_label in all_label_groups.groups.keys():\n",
+    "assert all_metadata.shape[0] == metadata_train.shape[0] + metadata_test.shape[0], \"Train and test set sizes don't add up.\"\n",
+    "assert set(metadata_train[\"file_name\"].tolist()).isdisjoint(set(metadata_test[\"file_name\"].tolist())), \"Train and test sets are not disjoint.\"\n",
+    "class_counts_all = all_metadata[\"label\"].value_counts()\n",
+    "class_counts_train = metadata_train[\"label\"].value_counts()\n",
+    "class_counts_test = metadata_test[\"label\"].value_counts()\n",
+    "for class_label in all_metadata_groups.groups.keys():\n",
     "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
     "\n",
     "# save to files:\n",
-    "labels_train.to_csv(label_files_new_split[\"train\"], index=False)\n",
-    "labels_test.to_csv(label_files_new_split[\"test\"], index=False)"
+    "os.makedirs(new_split_metadata_dir, exist_ok=True)\n",
+    "metadata_train.to_csv(new_split_metadata_files[\"train\"], index=False)\n",
+    "metadata_test.to_csv(new_split_metadata_files[\"test\"], index=False)"
    ]
   }
  ],
