Added code for balanced_train set.

--- a/data_prep/AudioSet/data_exploration/explore_data.ipynb
+++ b/data_prep/AudioSet/data_exploration/explore_data.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "data_subsets = [\"unbalanced_train\", \"eval\"]"
+    "data_subsets = [\"unbalanced_train\", \"balanced_train\", \"eval\"]"
    ]
   },
   {
@@ -62,6 +62,7 @@
      "output_type": "stream",
      "text": [
       "Size of unbalanced_train set: 13268\n",
+      "Size of balanced_train set: 325\n",
       "Size of eval set: 344\n"
      ]
     }
@@ -84,8 +85,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Verifying unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 28936.37it/s]\n",
-      "Verifying eval subset...: 100%|██████████| 344/344 [00:00<00:00, 25443.33it/s]\n"
+      "Verifying unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 24361.61it/s]\n",
+      "Verifying balanced_train subset...: 100%|██████████| 325/325 [00:00<00:00, 19203.61it/s]\n",
+      "Verifying eval subset...: 100%|██████████| 344/344 [00:00<00:00, 19739.52it/s]\n"
      ]
     }
    ],
@@ -130,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Examining unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 28119.79it/s]\n"
+      "Examining unbalanced_train subset...: 100%|██████████| 13268/13268 [00:00<00:00, 25611.61it/s]\n"
      ]
     },
     {
@@ -147,7 +149,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Examining eval subset...: 100%|██████████| 344/344 [00:00<00:00, 26545.25it/s]"
+      "Examining balanced_train subset...: 100%|██████████| 325/325 [00:00<00:00, 26621.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of files with unexpected lengths: 4\n",
+      "Minimim clip length: 9.1798125s\n",
+      "Maximum clip length: 10.0s\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Examining eval subset...: 100%|██████████| 344/344 [00:00<00:00, 27440.34it/s]"
      ]
     },
     {
