--- a/data_prep/AudioSet/extract_labels.ipynb
+++ b/data_prep/AudioSet/extract_labels.ipynb
@@ -17,8 +17,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import json\n",
-    "import torchaudio\n",
-    "import tqdm"
+    "import torchaudio"
    ]
   },
   {
@@ -33,6 +32,7 @@
     "ONTOLOGY_FILE = \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/ontology.json\"\n",
     "ORIG_METADATA_FILES = {\n",
     "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/unbalanced_train_segments.csv\",\n",
+    "    \"balanced_train\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/balanced_train_segments.csv\",\n",
     "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/orig_metadata_files/eval_segments.csv\"\n",
     "}\n",
     "# AudioSet music mood subset label names:\n",
@@ -46,9 +46,10 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "data_subsets = [\"eval\"]\n",
+    "data_subsets = [\"balanced_train\", \"eval\"]\n",
     "new_metadata_files = {\n",
     "    \"unbalanced_train\": \"/proj/systewar/datasets/audioset_music_mood/metadata_unbalanced_train.csv\",\n",
+    "    \"balanced_train\": \"/proj/systewar/datasets/audioset_music_mood/metadata_balanced_train.csv\",\n",
     "    \"eval\": \"/proj/systewar/datasets/audioset_music_mood/metadata_eval.csv\"\n",
     "}"
    ]
@@ -125,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading eval set metadata...\n",
+      "Loading balanced_train set metadata...\n",
       "\n"
      ]
     },
@@ -133,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11717/3297832948.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "/tmp/ipykernel_24722/3297832948.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  orig_metadata_dfs[subset] = pd.read_csv(ORIG_METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n"
      ]
     },
@@ -141,6 +142,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 22160 entries, 0 to 22159\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   youtube_id       22160 non-null  object \n",
+      " 1   start_seconds    22160 non-null  float64\n",
+      " 2   end_seconds      22160 non-null  float64\n",
+      " 3   positive_labels  22160 non-null  object \n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 692.6+ KB\n",
+      "None\n",
+      "\n",
+      "\n",
+      "Loading eval set metadata...\n",
+      "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 20371 entries, 0 to 20370\n",
       "Data columns (total 4 columns):\n",
@@ -155,6 +172,14 @@
       "None\n",
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_24722/3297832948.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  orig_metadata_dfs[subset] = pd.read_csv(ORIG_METADATA_FILES[subset], sep=\", \", names=col_names, header=None, skiprows=[0, 1, 2])\n"
      ]
     }
    ],
@@ -178,6 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original size of balanced_train set: 325\n",
       "Original size of eval set: 344\n"
      ]
     }
@@ -197,16 +223,34 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Extracting labels for eval set: 100%|██████████| 344/344 [00:00<00:00, 478.17it/s]"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Extracting labels for balanced_train set...\n",
+      "Number of audio files with not exactly 1 music mood label: 7\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 318 entries, 0 to 317\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   orig_subset     318 non-null    object\n",
+      " 1   file_name       318 non-null    object\n",
+      " 2   length_samples  318 non-null    int64 \n",
+      " 3   label           318 non-null    object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 10.1+ KB\n",
+      "None\n",
+      "\n",
+      "      orig_subset              file_name  length_samples           label\n",
+      "0  balanced_train   Vo6eT8eMMfQ_30.0.wav          160000  Exciting music\n",
+      "1  balanced_train  BscoQHJrNm8_170.0.wav          160000     Angry music\n",
+      "2  balanced_train  Vk-V0EZ3UIY_150.0.wav          160000     Funny music\n",
+      "3  balanced_train   BtdzVnXZ0i4_30.0.wav          160000       Sad music\n",
+      "4  balanced_train  0khKvVDyYV4_240.0.wav          160000     Happy music\n",
+      "\n",
+      "\n",
+      "Extracting labels for eval set...\n",
       "Number of audio files with not exactly 1 music mood label: 7\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -231,13 +275,6 @@
       "\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -249,7 +286,8 @@
     "    clip_length_samples = []\n",
     "    mood_labels = []\n",
     "    n_bad_files = 0     # number of audio files with not exactly 1 music mood label\n",
-    "    for file_name in tqdm.tqdm(audio_file_names[subset], total=len(audio_file_names[subset]), desc=\"Extracting labels for {} set\".format(subset)):\n",
+    "    print(\"Extracting labels for {} set...\".format(subset))\n",
+    "    for file_name in audio_file_names[subset]:\n",
     "        # extract youtube ID from file name:\n",
     "        youtube_id_start_time = file_name.replace(\".wav\", \"\")\n",
     "        assert len(youtube_id_start_time) == len(file_name) - len(\".wav\"), \"Error with removing '.wav'.\"\n",
