--- a/data_prep/IMAC_images/split_dataset.ipynb
+++ b/data_prep/IMAC_images/split_dataset.ipynb
@@ -37,9 +37,11 @@
    "outputs": [],
    "source": [
     "# script options:\n",
-    "N_class_test = 200     # number of samples per class in (new) test set\n",
+    "N_class_val = 50     # number of samples per class in validation set\n",
+    "N_class_test = 200     # number of samples per class in test set\n",
     "metadata_files_split = {\n",
     "    \"train\": \"/proj/systewar/datasets/IMAC/image_dataset/metadata_train.csv\",\n",
+    "    \"val\": \"/proj/systewar/datasets/IMAC/image_dataset/metadata_val.csv\",\n",
     "    \"test\": \"/proj/systewar/datasets/IMAC/image_dataset/metadata_test.csv\"\n",
     "}"
    ]
@@ -177,11 +179,9 @@
     }
    ],
    "source": [
-    "# group by class label:\n",
-    "metadata_groups = metadata.groupby(by=\"label\", axis=\"index\")\n",
-    "\n",
     "# construct stratified test set by randomly sampling from each class:\n",
-    "metadata_test = metadata_groups.sample(n=N_class_test, random_state=42)\n",
+    "metadata_test_groups = metadata.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_test = metadata_test_groups.sample(n=N_class_test, random_state=42)\n",
     "print(metadata_test.info())\n",
     "\n",
     "# sanity check:\n",
@@ -199,61 +199,120 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20229 entries, 0 to 21828\n",
+      "Int64Index: 400 entries, 7392 to 19945\n",
       "Data columns (total 3 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   subdir_name  20229 non-null  object\n",
-      " 1   file_name    20229 non-null  object\n",
-      " 2   label        20229 non-null  object\n",
+      " 0   subdir_name  400 non-null    object\n",
+      " 1   file_name    400 non-null    object\n",
+      " 2   label        400 non-null    object\n",
       "dtypes: object(3)\n",
-      "memory usage: 632.2+ KB\n",
-      "None\n",
-      "\n",
-      "contentment    4930\n",
-      "amusement      4524\n",
-      "awe            2681\n",
-      "excitement     2525\n",
-      "sadness        2433\n",
-      "disgust        1391\n",
-      "anger           976\n",
-      "fear            769\n",
-      "Name: label, dtype: int64\n"
+      "memory usage: 12.5+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# construct training set:\n",
-    "metadata_train = metadata.drop(index=list(metadata_test.index))\n",
-    "print(metadata_train.info())\n",
-    "print()\n",
-    "print(metadata_train[\"label\"].value_counts())\n",
+    "# remove test set:\n",
+    "metadata_train_val = metadata.drop(index=list(metadata_test.index))\n",
+    "\n",
+    "# construct stratified validation set by randomly sampling from each class:\n",
+    "metadata_val_groups = metadata_train_val.groupby(by=\"label\", axis=\"index\")\n",
+    "metadata_val = metadata_val_groups.sample(n=N_class_val, random_state=42)\n",
+    "print(metadata_val.info())\n",
     "\n",
     "# sanity check:\n",
-    "assert set(metadata_train.index).isdisjoint(set(metadata_test.index)), \"Train and test sets are not disjoint.\""
+    "for count in metadata_val[\"label\"].value_counts():\n",
+    "    assert count == N_class_val, \"Error with creating stratified validation set.\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 19829 entries, 0 to 21828\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   subdir_name  19829 non-null  object\n",
+      " 1   file_name    19829 non-null  object\n",
+      " 2   label        19829 non-null  object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 619.7+ KB\n",
+      "None\n",
+      "\n",
+      "contentment    4880\n",
+      "amusement      4474\n",
+      "awe            2631\n",
+      "excitement     2475\n",
+      "sadness        2383\n",
+      "disgust        1341\n",
+      "anger           926\n",
+      "fear            719\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# construct training set:\n",
+    "metadata_train = metadata_train_val.drop(index=list(metadata_val.index))\n",
+    "print(metadata_train.info())\n",
+    "print()\n",
+    "print(metadata_train[\"label\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check that all subsets are disjoint:\n",
+    "metadata_subsets = [metadata_train, metadata_val, metadata_test]\n",
+    "subset_names = list(metadata_files_split.keys())\n",
+    "for subset_1, name_1 in zip(metadata_subsets, subset_names):\n",
+    "    for subset_2, name_2 in zip(metadata_subsets, subset_names):\n",
+    "        if name_1 != name_2:\n",
+    "            assert set(subset_1.index).isdisjoint(set(subset_2.index)), \"{} and {} are not disjoint\".format(name_1, name_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# reset indices:\n",
     "metadata_train = metadata_train.reset_index(drop=True)\n",
+    "metadata_val = metadata_val.reset_index(drop=True)\n",
     "metadata_test = metadata_test.reset_index(drop=True)\n",
     "\n",
+    "# sanity checks:\n",
+    "assert metadata.shape[0] == metadata_train.shape[0] + metadata_val.shape[0] + metadata_test.shape[0], \"Subset set sizes don't add up.\"\n",
+    "# check that all subsets are disjoint:\n",
+    "metadata_subsets = [metadata_train, metadata_val, metadata_test]\n",
+    "subset_names = list(metadata_files_split.keys())\n",
+    "for subset_1, name_1 in zip(metadata_subsets, subset_names):\n",
+    "    for subset_2, name_2 in zip(metadata_subsets, subset_names):\n",
+    "        if name_1 != name_2:\n",
+    "            assert set(subset_1[\"file_name\"].tolist()).isdisjoint(set(subset_2[\"file_name\"].tolist())), \"{} and {} are not disjoint\".format(name_1, name_2)\n",
     "# more sanity checks:\n",
-    "assert metadata.shape[0] == metadata_train.shape[0] + metadata_test.shape[0], \"Train and test set set sizes don't add up.\"\n",
-    "assert set(metadata_train[\"file_name\"].tolist()).isdisjoint(set(metadata_test[\"file_name\"].tolist())), \"Train and test sets are not disjoint.\"\n",
     "class_counts_all = metadata[\"label\"].value_counts()\n",
     "class_counts_train = metadata_train[\"label\"].value_counts()\n",
+    "class_counts_val = metadata_val[\"label\"].value_counts()\n",
     "class_counts_test = metadata_test[\"label\"].value_counts()\n",
-    "for class_label in metadata_groups.groups.keys():\n",
-    "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
+    "for class_label in metadata_test_groups.groups.keys():\n",
+    "    assert class_counts_all[class_label] == class_counts_train[class_label] + class_counts_val[class_label] + class_counts_test[class_label], \"Error with splitting dataset.\"\n",
     "\n",
-    "# save to fi\n",
+    "# save to file:\n",
     "metadata_train.to_csv(metadata_files_split[\"train\"], index=False)\n",
+    "metadata_val.to_csv(metadata_files_split[\"val\"], index=False)\n",
     "metadata_test.to_csv(metadata_files_split[\"test\"], index=False)"
    ]
   }
